--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.58MB/s(Youtube:不良林), server: 36.139.115.52, port: 11208, type: vmess, uuid: 21dcbec8-eee8-3d20-82b6-f8c16fe6dc8d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.05MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇬🇧 英国-1.88MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: 36.139.154.17, port: 45324, type: ss, cipher: chacha20-ietf-poly1305, password: 37991120-21c6-41e2-a557-8115b9983386}
-  - {name: 🇨🇦 加拿大-1.18MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-2.39MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-434.8KB/s(Youtube:不良林), server: 42.3.19.58, port: 39999, type: vmess, uuid: 21dcbec8-eee8-3d20-82b6-f8c16fe6dc8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-313.7KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: 120.233.7.221, port: 32006, type: vmess, uuid: 21dcbec8-eee8-3d20-82b6-f8c16fe6dc8d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.41MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 213d1480-23fd-44aa-9d91-b1e3502a59c5, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.55MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
