--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.05MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇬🇧 英国-1.88MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-313.7KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: 120.233.7.221, port: 32006, type: vmess, uuid: 21dcbec8-eee8-3d20-82b6-f8c16fe6dc8d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.41MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 213d1480-23fd-44aa-9d91-b1e3502a59c5, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇫🇷 法国-1.35MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇩🇪 德国-1.55MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.19MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
