--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇺🇸 美国-5.89MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.86MB/s(Youtube:不良林), server: 36.139.154.17, port: 45184, type: vmess, uuid: 11d24df8-4651-4db7-97d7-b0bb70b73ba5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 36.139.154.17}}
-  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.04MB/s(Youtube:不良林), server: 103.152.226.209, port: 57891, type: vmess, uuid: 564d7a27-b67f-49c9-d220-2be468dabfd6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 72.140.224.197, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-8.16MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
-  - {name: 🇨🇭 瑞士-419.7KB/s(Youtube:不良林), server: ch1.nodegz.top, port: 1400, type: trojan, password: b6f47fcf-6195-38d4-8f49-9e5ccd6bd8f1, sni: ch1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.75MB/s(Youtube:不良林), server: jpaz1.xmrth-node.xyz, port: 11178, type: vmess, uuid: 30670cc5-0160-3ec8-98d5-606237ec5169, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: jpaz1.xmrth-node.xyz}}
+  - {name: 🇩🇪 德国-1.55MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-9.58MB/s(Youtube:不良林), server: 36.139.154.162, port: 45149, type: vmess, uuid: 25066212-3c68-4f60-9845-80632aa27a20, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 36.139.154.162}}
+  - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.72MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.57MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-698.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-419.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-419.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-419.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-419.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-419.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-419.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-419.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-698.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
